{
  "version": 4,
  "terraform_version": "1.3.0",
  "serial": 157,
  "lineage": "c98aa786-9b86-ecbe-f434-e0670bbfd016",
  "resources": [
    {
      "module": "module.ec2_module",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09d3b3274b6c5d4aa",
            "arn": "arn:aws:ec2:us-east-1:116959839496:instance/i-0387846af9f1d6c3d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0387846af9f1d6c3d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06959a56a5eb92889",
            "private_dns": "ip-10-0-0-126.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.126",
            "public_dns": "ec2-54-83-87-60.compute-1.amazonaws.com",
            "public_ip": "54.83.87.60",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00d51be3a5acf8881",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f0b4e2c69200bf35",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ddf400f84d35dfd8"
            ]
          },
          "dependencies": [
            "data.vault_aws_access_credentials.aws_creds",
            "module.sec_module.aws_security_group.ssh-allowed",
            "module.subnet_module.aws_subnet.public_subnet",
            "module.vpc_module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ig_module",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ingateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116959839496:internet-gateway/igw-051684927495439ba",
            "id": "igw-051684927495439ba",
            "owner_id": "116959839496",
            "tags": {
              "Name": "dev-ig"
            },
            "tags_all": {
              "Name": "dev-ig"
            },
            "vpc_id": "vpc-0de14c21f6bba4e4c"
          },
          "dependencies": [
            "data.vault_aws_access_credentials.aws_creds",
            "module.vpc_module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rt_module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116959839496:route-table/rtb-0a110fbfc2c5c8666",
            "id": "rtb-0a110fbfc2c5c8666",
            "owner_id": "116959839496",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-051684927495439ba",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-pubintacc"
            },
            "tags_all": {
              "Name": "dev-pubintacc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de14c21f6bba4e4c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.vault_aws_access_credentials.aws_creds",
            "module.ig_module.aws_internet_gateway.ingateway",
            "module.vpc_module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rt_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02bd01dfc343ec0f2",
            "route_table_id": "rtb-0a110fbfc2c5c8666",
            "subnet_id": "subnet-0f0b4e2c69200bf35"
          },
          "dependencies": [
            "data.vault_aws_access_credentials.aws_creds",
            "module.ig_module.aws_internet_gateway.ingateway",
            "module.rt_module.aws_route_table.route_table",
            "module.subnet_module.aws_subnet.public_subnet",
            "module.vpc_module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sec_module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-allowed",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116959839496:security-group/sg-0ddf400f84d35dfd8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Traffic to Outside",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ddf400f84d35dfd8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Traffic from Outside",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Traffic from Outside",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Traffic from Outside",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20221029033719817400000001",
            "name_prefix": "terraform-",
            "owner_id": "116959839496",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh-allowed"
            },
            "tags_all": {
              "Name": "ssh-allowed"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de14c21f6bba4e4c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.vault_aws_access_credentials.aws_creds",
            "module.vpc_module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privet_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116959839496:subnet/subnet-02b61bceef52e37fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02b61bceef52e37fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "116959839496",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-private-subnet"
            },
            "tags_all": {
              "Name": "dev-private-subnet"
            },
            "vpc_id": "vpc-0de14c21f6bba4e4c"
          },
          "dependencies": [
            "data.vault_aws_access_credentials.aws_creds",
            "module.vpc_module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116959839496:subnet/subnet-0f0b4e2c69200bf35",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f0b4e2c69200bf35",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "116959839496",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-public-subnet"
            },
            "tags_all": {
              "Name": "dev-public-subnet"
            },
            "vpc_id": "vpc-0de14c21f6bba4e4c"
          },
          "dependencies": [
            "data.vault_aws_access_credentials.aws_creds",
            "module.vpc_module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116959839496:vpc/vpc-0de14c21f6bba4e4c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03c4021c403dc59d6",
            "default_route_table_id": "rtb-07b48bda4b195e8ed",
            "default_security_group_id": "sg-081d16e56c11872ec",
            "dhcp_options_id": "dopt-0f73304ea7977012e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0de14c21f6bba4e4c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07b48bda4b195e8ed",
            "owner_id": "116959839496",
            "tags": {
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Name": "dev-vpc"
            }
          },
          "dependencies": [
            "data.vault_aws_access_credentials.aws_creds"
          ]
        }
      ]
    }
  ]
}